comfirmDialog box and text popping out of screen while deleting indexedDB fixed.
When we try to delete a DB in indexedDB inside storage section in application in inspect element,
the confirm dialog box and its text was popping out of screen when we drag the inspect element to
right increasing the page view.


Updated some css in confirmDialog.css file to fix the issue.

--- a/front_end/ui/legacy/closeButton.css
+++ b/front_end/ui/legacy/closeButton.css
@@ -23,6 +23,7 @@
 
 .close-button:focus {
   outline: 2px solid var(--sys-color-state-focus-ring);
+  margin-left: 2px; /* Adds 2 pixels of margin to the left of the element */
 }
 
 @media (forced-colors: active) and (prefers-color-scheme: dark) {
